Fixes for migration to 5.5.

--- a/web/tmpl/Groups.tmpl
+++ b/web/tmpl/Groups.tmpl
@@ -228,7 +228,7 @@ $(document).ready(function(){
  <tfoot>
   <tr>
    <td id='create_group_hidden' colspan='9' height='26'>
-    <span style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="$('#create_group_hidden').hide(); $('#create_group_shown').fadeIn('fast');">Create new group</span>
+    <span style="font-size: 1em" class='ui-button ui-corner-all' onClick="$('#create_group_hidden').hide(); $('#create_group_shown').fadeIn('fast');">Create new group</span>
    </td>
   </tr>
   <tr id='create_group_shown' style="display:none;">
