--- a/web/tmpl/Notebooks.tmpl
+++ b/web/tmpl/Notebooks.tmpl
@@ -201,7 +201,7 @@ $(document).ready(function(){
  <tfoot>
   <tr>
    <td id='create_list_hidden' colspan='9' height='26'>
-    <span style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="$('#create_list_hidden').hide(); $('#create_list_shown').fadeIn('fast');">Create new notebook</span>
+    <span style="font-size: 1em" class='ui-button ui-corner-all' onClick="$('#create_list_hidden').hide(); $('#create_list_shown').fadeIn('fast');">Create new notebook</span>
    </td>
   </tr>
   <tr id='create_list_shown' style="display:none;">
