--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -730,19 +730,19 @@ function send_items_to(page_name, format) {
 		<table style="float:left;white-space:nowrap;padding-right:5px;">
 			<tr>
 				<td style="font-weight:bold;color:dimgray;float:right;">User name</td>
-				<td style="padding-left:10px;"><TMPL_VAR NAME='USER_NAME'></td>
+				<td style="padding-left:10px;color:dimgray;"><TMPL_VAR NAME='USER_NAME'></td>
 			</tr>
 			<tr>
 				<td style="font-weight:bold;color:dimgray;float:right;">Full name</td>
-				<td style="padding-left:10px;"><TMPL_VAR NAME='FULL_NAME'></td>
+				<td style="padding-left:10px;color:dimgray;"><TMPL_VAR NAME='FULL_NAME'></td>
 			</tr>
 			<tr>
 				<td></td>
-				<td class="small" style="padding-left:10px;"><TMPL_VAR NAME='DESCRIPTION'></td>
+				<td class="small" style="padding-left:10px;color:dimgray;"><TMPL_VAR NAME='DESCRIPTION'></td>
 			</tr>
 			<tr>
 				<td style="font-weight:bold;color:dimgray;float:right;">Email</td>
-				<td style="padding-left:10px;"><a href="mailto:<TMPL_VAR NAME='EMAIL'>"><TMPL_VAR NAME='EMAIL'></a></td>
+				<td style="padding-left:10px;color:dimgray;"><TMPL_VAR NAME='EMAIL'></td>
 			</tr>
 		</table>
 	</div>
