--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -1330,7 +1330,11 @@ Color <span style="color:#FF66FF;">masked</span> and <span style="color:#FF9900;
   </table>
 </div>
 <div class="small" style="float: left;">
-   Change HSP colors <span>(Click Color to Adjust)</span>
+   Change HSP colors <span>(Click Color to Adjust)</span><br>
+   Use First Color for all:   
+  <label><input  type="radio" name="hsp_single_color" id="hsp_single_color" tabindex="1" value="1" <TMPL_VAR NAME="HSP_SINGLE_COLOR_YES">/>Yes</label>
+  <label><input  type="radio" name="hsp_single_color" id="hsp_single_color" tabindex="1" value="0" <TMPL_VAR NAME="HSP_SINGLE_COLOR_NO"> />No</label>
+
  <DIV id="hsp_colors"><TMPL_VAR NAME="HSP_COLOR"></DIV>
  </div>
 </div>
