--- a/web/tmpl/NotebookView.tmpl
+++ b/web/tmpl/NotebookView.tmpl
@@ -11,7 +11,7 @@ $(document).ready(function(){
 	
 	$.ajaxSetup({
 		type: "POST",
-		url: "<TMPL_VAR NAME='PAGE_NAME'>",
+		//url: "<TMPL_VAR NAME='PAGE_NAME'>",
 		dataType: "html",
 		cache: false,
 	});
