--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -81,23 +81,23 @@ function search_organisms (search_term) {
 	}
 }
 
-// function search_users (search_term) {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'search_users',
-// 			search_term: search_term,
-// 			timestamp: new Date().getTime()
-// 		},
-// 		success : function(data) {
-// 			var obj = jQuery.parseJSON(data);
-// 			if (obj && obj.items) {
-// 				$("#edit_user").autocomplete({source: obj.items});
-// 				$("#edit_user").autocomplete("search");
-// 			}
-// 		},
-// 	});
-// }
+function search_users (search_term) {
+	$.ajax({
+		data: {
+			jquery_ajax: 1,
+			fname: 'search_users',
+			search_term: search_term,
+			timestamp: new Date().getTime()
+		},
+		success : function(data) {
+			var obj = jQuery.parseJSON(data);
+			if (obj && obj.items) {
+				$("#edit_user").autocomplete({source: obj.items});
+				$("#edit_user").autocomplete("search");
+			}
+		},
+	});
+}
 
 function get_genome_info () {
 	$.ajax({
@@ -183,257 +183,6 @@ function update_genome_info (){
 	});
 }
 
-// function get_users_with_access () {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'get_users_with_access',
-// 			gid: <TMPL_VAR NAME='GID'>
-// 		},
-// 		success : function(data) {
-// 			if (data) {
-// 				$("#users_with_access").html(data);
-// 			}
-// 		}
-// 	});
-// }
-
-// function get_groups_with_access () {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'get_groups_with_access',
-// 			gid: <TMPL_VAR NAME='GID'>
-// 		},
-// 		success : function(data) {
-// 			if (data) {
-// 				$("#groups_with_access").html(data);
-// 			}
-// 		}
-// 	});
-// }
-
-// function get_available_users () {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'get_available_users',
-// 			gid: <TMPL_VAR NAME='GID'>
-// 		},
-// 		success : function(data) {
-// 			if (data) {
-// 				$("#genome_users_edit_box").html(data).dialog('open');
-// 			}
-// 		}
-// 	});
-// }
-
-// function get_available_groups () {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'get_available_groups',
-// 			gid: <TMPL_VAR NAME='GID'>
-// 		},
-// 		success : function(data) {
-// 			if (data) {
-// 				$("#genome_groups_edit_box").html(data).dialog('open');
-// 			}
-// 		}
-// 	});
-// }
-
-// function add_user() {
-// 	$('#select_user > option:selected').each( function(){
-// 		var uid = $(this).attr("value");
-// 		$(this).remove();
-// 		$.ajax({
-// 			data: {
-// 				jquery_ajax: 1,
-// 				fname: 'add_user',
-// 				gid: <TMPL_VAR NAME='GID'>,
-// 				uid: uid
-// 			},
-// 			success : function(data) {
-// 				if (data) {
-// 					get_users_with_access();
-// 					get_groups_with_access();
-// 				}
-// 			},
-// 		});
-// 	});
-// };
-
-// function remove_user (uid) {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'remove_user',
-// 			gid: <TMPL_VAR NAME='GID'>,
-// 			uid: uid
-// 		},
-// 		success : function(data) {
-// 			if (data) {
-// 				get_users_with_access();
-// 				get_groups_with_access();
-// 			}
-// 		},
-// 	});
-// }
-
-// function add_group() {
-// 	$('#select_group > option:selected').each( function(){
-// 		var ugid = $(this).attr("value");
-// 		$(this).remove();
-// 		$.ajax({
-// 			data: {
-// 				jquery_ajax: 1,
-// 				fname: 'add_group',
-// 				gid: <TMPL_VAR NAME='GID'>,
-// 				ugid: ugid
-// 			},
-// 			success : function(data) {
-// 				if (data) {
-// 					get_users_with_access();
-// 					get_groups_with_access();
-// 				}
-// 			},
-// 		});
-// 	});
-// };
-
-// function remove_group (ugid) {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'remove_group',
-// 			gid: <TMPL_VAR NAME='GID'>,
-// 			ugid: ugid
-// 		},
-// 		success : function(data) {
-// 			if (data) {
-// 				get_users_with_access();
-// 				get_groups_with_access();
-// 			}
-// 		},
-// 	});
-// }
-
-// function get_notebooks () {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'get_notebooks',
-// 			gid: <TMPL_VAR NAME='GID'>
-// 		},
-// 		success : function(data) {
-// 			if (data) {
-// 				$("#notebooks").html(data);
-// 			}
-// 		}
-// 	});
-// }
-
-// function add_to_notebook () {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'add_to_notebook',
-// 			gid: <TMPL_VAR NAME="GID">,
-// 		},
-// 		success : function(data) {
-// 			$("#genome_notebooks_edit_box").html(data).dialog('open');
-// 		},
-// 	});
-// }
-
-// function add_genome_to_notebook () {
-// 	$('#select_list_items > option:selected').each(
-// 		function() {
-// 			var nid = $(this).attr("value");
-// 			$.ajax({
-// 				data: {
-// 					jquery_ajax: 1,
-// 					fname: 'add_genome_to_notebook',
-// 					gid: <TMPL_VAR NAME="GID">,
-// 					nid: nid
-// 				},
-// 				success : function(data) {
-// 						if (data) {
-// 							get_notebooks();
-// 						}
-// 					}
-// 			});
-// 		}
-// 	);
-// 	$("#genome_notebooks_edit_box").dialog('close');
-// }
-
-// function remove_genome_from_notebook (nid) {
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'remove_genome_from_notebook',
-// 			gid: <TMPL_VAR NAME="GID">,
-// 			nid: nid
-// 		},
-// 		success : function(val) {
-// 			if (val) {
-// 				get_notebooks();
-// 			}
-// 		},
-// 	});
-// }
-
-// function search_notebooks (search_term) {
-// 	$("#wait_list").animate({opacity:1});
-// 	$("#select_list_items").html("<option disabled='disabled'>Searching...</option>");
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'search_notebooks',
-// 			gid: <TMPL_VAR NAME="GID">,
-// 			search_term: search_term,
-// 			timestamp: new Date().getTime()
-// 		},
-// 		success : function(val) {
-// 			var items = jQuery.parseJSON(val);
-// 			if (!pageObj.timestamp_lists || items.timestamp > pageObj.timestamp_lists) {
-// 				pageObj.timestamp_lists = items.timestamp;
-// 				$('#list_preview').hide();
-// 				$("#select_list_items").html(items.html);
-// 				var width = $("#genome_notebooks_edit_box").dialog("option", "width");
-// 				$("#select_list_items").width(width-40);
-// 				$("#wait_list").animate({opacity:0});
-// 			}
-// 		},
-// 	});
-// }
-
-// function get_list_preview (opts) {
-// 	$('#list_preview').hide();
-// 	$('#select_list_items > option:selected:last').each(
-// 		function() {
-// 			var nid = $(this).attr("value");
-// 			$.ajax({
-// 				data: {
-// 					jquery_ajax: 1,
-// 					fname: 'get_notebook_preview',
-// 					nid: nid,
-// 				},
-// 				success : 
-// 					function(data) {
-// 						var width = $("#genome_notebooks_edit_box").dialog("option", "width");
-// 						$("#select_list_items").width(width/2-30);
-// 						$('#list_preview').width(width/2-30);
-// 						$('#list_preview').html(data);
-// 						$('#list_preview').fadeIn('fast');
-// 					}
-// 			});
-// 		}
-// 	);
-// }
-
 function export_gff (gid) {
 	var server = '<TMPL_VAR NAME="SERVER">';
 	var link = server+"bin/export/coge_gff.pl?dsgid=";
@@ -469,12 +218,12 @@ function export_bed (gid) {
 		<td>
 			<span style="color:dimgray;font-weight:bold;">Genome Info</span>
 			<div id='genome_info' class="small ui-widget-content ui-corner-all" style="width:400px;"><TMPL_VAR NAME="GENOME_INFO"></div>
-			<span class='ui-button ui-button-go ui-corner-all' onClick="edit_genome_info();">Edit Info</span>
+			<span class='ui-button ui-corner-all' onClick="edit_genome_info();">Edit Info</span>
 		</td>
 		<td style="padding-left:10px;">
 			<span id='genome_data' style="color:dimgray;font-weight:bold;">Genome Data</span>
 			<div class="small ui-widget-content ui-corner-all"><TMPL_VAR NAME="GENOME_DATA"></div>
-			<span class='ui-button ui-corner-all ui-button-icon-right ui-button-go' onclick="window.open('GenomeView.pl?dsgid=<TMPL_VAR NAME=GID>;chr=<TMPL_VAR NAME=CHR>')"><span class="ui-icon ui-icon-extlink"></span>Genome View</span>
+			<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('GenomeView.pl?dsgid=<TMPL_VAR NAME=GID>;chr=<TMPL_VAR NAME=CHR>')"><span class="ui-icon ui-icon-extlink"></span>Genome View</span>
 		</td>
 	</tr>
 </table>
@@ -482,40 +231,16 @@ function export_bed (gid) {
 
 <span style="color:dimgray;font-weight:bold;">Experiments</span>
 <TMPL_IF NAME='EXPERIMENTS'>
-<div class="small ui-widget-content ui-corner-all">
-<TMPL_VAR NAME='EXPERIMENTS'>
-</div>
+	<table class="small ui-widget-content ui-corner-all">
+		<tr>
+			<td>
+				<TMPL_VAR NAME='EXPERIMENTS'>
+			</td>
+		</tr>
+	</table>
 </TMPL_IF>
-<br>
-<span class='ui-button ui-corner-all ui-button-icon-right ui-button-go' onclick="window.open('LoadExperiment.pl?gid=<TMPL_VAR NAME=GID>')"><span class="ui-icon ui-icon-extlink"></span>Load Experiment</span>
+<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('LoadExperiment.pl?gid=<TMPL_VAR NAME=GID>')"><span class="ui-icon ui-icon-extlink"></span>Load Experiment</span>
 <br><br>
-
-<!--
-<span style="color:dimgray;font-weight:bold;">Notebooks</span>
-<div id="notebooks" class="small ui-widget-content ui-corner-all" style="width:670px;height:100px;overflow-y:auto;">
-<TMPL_VAR NAME='NOTEBOOKS'>
-</div>
-<span class='ui-button ui-button-go ui-button-icon-left ui-corner-all' onClick="add_to_notebook();"><span class="ui-icon ui-icon-plus"></span>Add to Notebook</span>
-<br><br>
-
-<table style="overflow:hidden;">
-	<tr style="vertical-align:top;">
-		<td>
-			<span style="color:dimgray;font-weight:bold;">Groups with Access</span>
-			<div id="groups_with_access" class="small ui-widget-content ui-corner-all" style="width:500px;height:100px;overflow-y:auto;">
-				<TMPL_VAR NAME='GROUPS'>
-			</div>
-		</td>
-		<td>
-			<span style="color:dimgray;font-weight:bold;">Users with Access</span>
-			<div id="users_with_access" class="small ui-widget-content ui-corner-all" style="width:160px;height:100px;overflow-y:auto;">
-				<TMPL_VAR NAME='USERS'>
-			</div>
-			<span class='ui-button ui-button-go ui-button-icon-left ui-corner-all' onClick="get_available_users();"><span class="ui-icon ui-icon-plus"></span>Add Users</span>
-		</td>
-	</tr>
-</table>
--->
 
 <div id="genome_info_edit_box" class="dialog_box" title="Edit Genome Info" style="display:none;"></div>
 <div id="genome_notebooks_edit_box" class="dialog_box" title="Add to Notebook" style="display:none;"></div>
@@ -550,7 +275,7 @@ function export_bed (gid) {
      </select>
  </tr>
 </table>
-<span class="ui-button ui-corner-all ui-button-go" onClick="export_gff(<TMPL_VAR NAME=GID>)">Export GFF File</span>
+<span class="ui-button ui-corner-all" onClick="export_gff(<TMPL_VAR NAME=GID>)">Export GFF File</span>
 <br><br><span class="small" id="export_gff_link"></span>
 </div>
 
@@ -619,7 +344,7 @@ function export_bed (gid) {
 	    <td>Organism:</td>
 	    <td>
 	      <input id="edit_organism" onkeyup="wait_to_search(search_organisms, this.value);" size="45" value="<TMPL_VAR NAME='ORGANISM'>"/>
-	      <!--<span id="new_organism_button" onClick="$('#create_new_organism_dialog').dialog('open'); activate_on_input('edit_organism_name', 'create_organism_button');" class='ui-button ui-corner-all ui-button-go'>New</span>-->
+	      <!--<span id="new_organism_button" onClick="$('#create_new_organism_dialog').dialog('open'); activate_on_input('edit_organism_name', 'create_organism_button');" class='ui-button ui-corner-all'>New</span>-->
 	    </td>
 	  </tr>	
 	  <tr>
@@ -630,14 +355,14 @@ function export_bed (gid) {
 	    <td>Type:</td>
 	    <td>
 	      <select id="select_type" style="width:230px;" value="<TMPL_VAR NAME='TYPES'>"></select>
-	      <!-- <span id="new_type_button" onClick="$('#create_new_type_dialog').dialog('open'); activate_on_input('edit_type_name', 'create_type_button');" class='ui-button ui-corner-all ui-button-go'>New</span> -->
+	      <!-- <span id="new_type_button" onClick="$('#create_new_type_dialog').dialog('open'); activate_on_input('edit_type_name', 'create_type_button');" class='ui-button ui-corner-all'>New</span> -->
 	    </td>
 	  </tr>
 	  <tr>
 	    <td>Source:</td>
 	    <td>
 	      <input id="edit_source" size="45" value="<TMPL_VAR NAME='SOURCE'>"/>
-	      <!-- <span id="new_source_button" onClick="$('#create_new_source_dialog').dialog('open'); activate_on_input('edit_source_name', 'create_source_button');" class='ui-button ui-corner-all ui-button-go'>New</span> -->
+	      <!-- <span id="new_source_button" onClick="$('#create_new_source_dialog').dialog('open'); activate_on_input('edit_source_name', 'create_source_button');" class='ui-button ui-corner-all'>New</span> -->
 	    </td>
 	  </tr>
 	  <tr>
@@ -656,91 +381,6 @@ function export_bed (gid) {
 	<br>
 	<span onClick="update_genome_info();" class='ui-button ui-corner-all ui-button-go'>Update</span>
 </TMPL_IF>
-
-
-
-<!-- <TMPL_IF NAME="ADD_TO_NOTEBOOK">
-	<script>
-		$(function() {
-			search_notebooks('');
-		});
-	</script>
-	<table class="small">
-		<tr>
-			<td colspan='2'>
-				Search: <input type="textbox" size="53" id="edit_list_search" onkeyup="wait_to_search(search_notebooks, this.value);"/><span class='ui-button ui-corner-all' onclick="search_notebooks($('#edit_list_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
-			</td>
-		</tr>
-		<tr>
-			<td valign='top'>
-				<select id="select_list_items" size="10" style='width:460px;height:138px;' onClick="get_list_preview();">
-				</select>
-			</td>
-			<td valign='top'>
-				<div id="list_preview" style="display:none;color:Gray;height:131px;border:1px solid LightGray;padding: 1px 4px 4px 4px;font-family:Arial, Helvetica, sans-serif;font-size:0.8em;"></div>
-			</td>
-		</tr>
-	</table>
-	<span href="javascript:void(0)" onClick="add_genome_to_notebook();" class='ui-button ui-button-go ui-corner-all'>Add</span>
-</TMPL_IF> -->
-
-
-
-<!-- <TMPL_IF NAME="ADD_USERS">
-	<script TYPE="text/javascript">
-		$(function() {
-			user_filter = new filterlist(document.new_users.select_user);
-			set_input("input_user");
-		});
-		$('#genome_users_edit_box').dialog({width:300});
-	</script>
-	<table class="small">
-		<tr>
-			<td>
-				<input id="input_user" onKeyUp="user_filter.set(this.value)" style="width:200px;"/>
-				<form name="new_users">
-					<select multiple id="select_user" name="select_user" ondblclick="add_user();" size="10" style="min-width:200px;">
-						<TMPL_LOOP NAME="ALL_UID_LOOP">
-							<OPTION <TMPL_VAR NAME="USELECTED"> value=<TMPL_VAR NAME="UID">><TMPL_VAR NAME="UNAME"></OPTION>
-						</TMPL_LOOP>
-					</select>
-				</form>
-				<input id="notify" type="checkbox" />Notify users via email
-			</td>
-		</tr>
-	</table>
-	<br>
-	<span onClick="add_user();" class="ui-button ui-corner-all ui-button-go">Add</span>
-	<span onClick="$(this).parent().dialog('close');" class="ui-button ui-corner-all ui-button-go">Done</span>
-</TMPL_IF> -->
-
-
-
-<!-- <TMPL_IF NAME="ADD_GROUPS">
-	<script TYPE="text/javascript">
-		$(function() {
-			group_filter = new filterlist(document.new_groups.select_group);
-			set_input("input_group");
-		});
-	</script>
-	<table class="small">
-		<tr>
-			<td>
-				<input id="input_group" onKeyUp="group_filter.set(this.value)" style="width:200px;"/>
-				<form name="new_groups">
-					<select multiple id="select_group" name="select_group" ondblclick="add_group();" size="10" style="min-width:200px;">
-						<TMPL_LOOP NAME="ALL_UGID_LOOP">
-							<OPTION <TMPL_VAR NAME="UGSELECTED"> value=<TMPL_VAR NAME="UGID">><TMPL_VAR NAME="UGNAME"></OPTION>
-						</TMPL_LOOP>
-					</select>
-				</form>
-			</td>
-		</tr>
-	</table>
-	<br>
-	<span onClick="add_group();" class="ui-button ui-corner-all ui-button-go">Add</span>
-	<span onClick="$(this).parent().dialog('close');" class="ui-button ui-corner-all ui-button-go">Done</span>
-</TMPL_IF> -->
 
 
 
@@ -764,59 +404,6 @@ function export_bed (gid) {
 		</tr>
 	</table>
 </TMPL_IF>
-
-
-
-<!-- <TMPL_IF NAME='DO_GROUPS'>
-	<table class="small">
-		<TMPL_LOOP NAME="GROUP_LOOP">
-		<tr valign="top">
-			<td style="white-space:nowrap;"><TMPL_VAR NAME="GROUP_NAME"></td>
-			<td style="white-space:nowrap;"><TMPL_VAR NAME="GROUP_ROLE"></td>
-			<td><TMPL_VAR NAME="GROUP_DESC"></td>
-			<td style="float:right;">
-				<TMPL_IF NAME="GROUP_ID">
-					<span class='link ui-icon ui-icon-closethick' onclick="remove_group(<TMPL_VAR NAME=GROUP_ID>)"></span>
-				</TMPL_IF>
-			</td>
-		</tr>
-		</TMPL_LOOP>
-	</table>
-</TMPL_IF> -->
-
-
-
-<!-- <TMPL_IF NAME='DO_USERS'>
-	<table class="small">
-		<TMPL_LOOP NAME="USER_LOOP">
-		<tr valign="top">
-			<td><TMPL_VAR NAME="USER_INFO"></td>
-			<td style="float:right;">
-				<TMPL_IF NAME="USER_ID">
-					<span class='link ui-icon ui-icon-closethick' onclick="remove_user(<TMPL_VAR NAME='USER_ID'>)"></span>
-				</TMPL_IF>
-			</td>
-		</tr>
-		</TMPL_LOOP>
-	</table>
-</TMPL_IF> -->
-
-
-
-<!-- <TMPL_IF NAME='DO_NOTEBOOKS'>
-	<table class="small">
-		<TMPL_LOOP NAME="NOTEBOOK_LOOP">
-		<tr valign="top">
-			<td><TMPL_VAR NAME="NOTEBOOK_INFO"></td>
-			<td style="float:right;">
-				<TMPL_IF NAME="NOTEBOOK_ID">
-					<span class='link ui-icon ui-icon-closethick' onclick="remove_genome_from_notebook(<TMPL_VAR NAME='NOTEBOOK_ID'>)"></span>
-				</TMPL_IF>
-			</td>
-		</tr>
-		</TMPL_LOOP>
-	</table>
-</TMPL_IF> -->
 
 
 
