--- a/web/tmpl/GroupView.tmpl
+++ b/web/tmpl/GroupView.tmpl
@@ -16,8 +16,6 @@ $(document).ready(function(){
 	$(".dialog_box").dialog({autoOpen: false, width: 500, maxWidth: 600});
 });
 
-//function set_table () { $('#group_table').tablesorter({widgets: ['zebra']}); }
-
 function format_box_info (data) {
 	output = data.output;
 	return output;
@@ -168,146 +166,6 @@ function remove_user (opts) {
 	});
 }
 
-// function show_ladd(val) {
-// 	if(val==1) {
-// 		$('#remove_list').hide(0);
-// 		$('#add_list').show(0);
-// 	}
-// 	else {
-// 		$('#remove_list').show(0);
-// 		$('#add_list').hide(0);
-// 	}
-// }
-
-// function add_lists (opts) {
-// 	ugid = opts.ugid;
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'add_lists',
-// 			ugid: ugid,
-// 		},
-// 		success : function(data) {
-// 			data = eval('('+data+')');
-// 			title = data.title;
-// 			$("#group_lists_edit_box").dialog("option", "title", title);
-// 			$("#group_lists_edit_box").html(format_box_info(data));
-// 			$("#group_lists_edit_box").dialog('open');
-// 			//setup_button_states();
-// 		},
-// 	});
-// }
-
-// function add_lists_to_group (opts) {
-// 	ugid = opts.ugid;
-// 	$('#select_list_items > option:selected').each(
-// 		function() {
-// 			var item_spec = $(this).attr("value");
-// 			//$(this).remove();
-// 			$.ajax({
-// 				data: {
-// 					jquery_ajax: 1,
-// 					fname: 'add_list_to_group',
-// 					ugid: ugid,
-// 					item_spec : item_spec,
-// 				},
-// 				success : 
-// 					function(data) {
-// 						if (data != 1) { alert(data); }
-// 						else {
-// 							run_get_group_info({divid: 'group_info', ugid: ugid}); // FIXME move outside loop
-// 						}
-// 					}
-// 			});
-// 		}
-// 	);
-// 	$("#group_lists_edit_box").dialog('close');
-// }
-
-// function remove_list_from_group (opts) {
-// 	ugid = opts.ugid;
-// 	lid = opts.lid;
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'remove_list_from_group',
-// 			ugid: ugid,
-// 			lid: lid,
-// 		},
-// 		success : function(val) {
-// 			run_get_group_info({divid: 'group_info', ugid: ugid});
-// 		},
-// 	});
-// }
-
-// function get_list_preview (opts) {
-// 	$('#list_preview').hide();
-// 	$('#select_list_items > option:selected:last').each(
-// 		function() {
-// 			var item_spec = $(this).attr("value");
-// 			$.ajax({
-// 				data: {
-// 					jquery_ajax: 1,
-// 					fname: 'get_list_preview',
-// 					item_spec: item_spec,
-// 				},
-// 				success : 
-// 					function(data) {
-// 						var width = $("#group_delete_box").dialog("option", "width");
-// 						$("#select_list_items").width(width/2-30);
-// 						$('#list_preview').width(width/2-30);
-// 						$('#list_preview').html(data);
-// 						$('#list_preview').fadeIn('fast');
-// 					}
-// 			});
-// 		}
-// 	);
-// }
-
-// function wait_to_search (search_func, ugid, search_term) {
-// 	if (!search_term || search_term.length > 2) {
-// 		pageObj.search_term = search_term;
-// 		pageObj.ugid = ugid;
-			
-// 		if (pageObj.time) {
-// 			clearTimeout(pageObj.time);
-// 		}
-		
-// 		// FIXME: could generalize by passing select id instead of separate search_* functions
-// 		pageObj.time = setTimeout(
-// 			function() { 
-// 				search_func(pageObj.ugid, pageObj.search_term); 
-// 			}, 
-// 			500
-// 		);
-// 	}
-// }
-
-// function search_lists (ugid, search_term) {
-// 	$("#wait_list").animate({opacity:1});
-// 	$("#select_list_items").html("<option disabled='disabled'>Searching...</option>");
-// 	$.ajax({
-// 		data: {
-// 			jquery_ajax: 1,
-// 			fname: 'search_lists',
-// 			ugid: ugid,
-// 			search_term: search_term,
-// 			timestamp: new Date().getTime()
-// 		},
-// 		success : function(val) {
-// 			var items = jQuery.parseJSON(val);
-// 			if (!pageObj.timestamp_lists || items.timestamp > pageObj.timestamp_lists) {
-// 				pageObj.timestamp_lists = items.timestamp;
-// 				$('#list_preview').hide();
-// 				$("#select_list_items").html(items.html);
-// 				var width = $("#group_delete_box").dialog("option", "width");
-// 				$("#select_list_items").width(width-40);
-// 				$("#wait_list").animate({opacity:0});
-// 			}
-// 		},
-// 	});
-// }
-
 function dialog_delete_group (opts) {
 	$("#group_delete_box").dialog("option", "title", "Delete Group");
 	$("#group_delete_box").dialog("option", "width", "450");
@@ -323,7 +181,7 @@ function delete_group (opts) {
 			ugid: ugid,
 		},
 		success : function(val) {
-			location.reload();
+			window.close();
 		},
 	});
 }
