Fix for issue 27

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -99,7 +99,7 @@ function update_info_box(featid) {
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
-			fname: 'database_param',
+			fname: 'generate_feat_info',
 			featid: featid,
 		},
 		success : function(data) {
