Remove jQuery ajax config param to set url

--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -7,7 +7,7 @@
 $(document).ready(function(){
 	$.ajaxSetup({
 		type: "GET",
-		url: '<TMPL_VAR NAME='PAGE_NAME'>',
+		//url: '<TMPL_VAR NAME='PAGE_NAME'>',
 		dataType: "html",
 		cache: false,
 	});
