--- a/web/tmpl/LoadGenome.tmpl
+++ b/web/tmpl/LoadGenome.tmpl
@@ -6,7 +6,7 @@
 <SCRIPT language="JavaScript">
 $(document).ready(function(){
 	$.ajaxSetup({
-		type: "GET",
+		type: "POST",
 		//url: '<TMPL_VAR NAME='PAGE_NAME'>',
 		dataType: "html",
 		cache: false,
@@ -265,10 +265,17 @@ function get_load_genome_log(load_id) {
 		success : function(data) {
 			var obj = jQuery.parseJSON(data);
 			
-			$('#load_genome_log').html(obj.log);
-			var height = $('#load_genome_log')[0].scrollHeight;
-    		$("#load_genome_log").animate({ scrollTop: height}, 500);
-    						
+			if (!obj) {
+				console.log(data);
+				return;
+			}
+
+			if (obj.log) {
+				$('#load_genome_log').html(obj.log.join('<BR>'));
+				var height = $('#load_genome_log')[0].scrollHeight;
+	    		$("#load_genome_log").animate({ scrollTop: height}, 500);
+    		}
+
 			if (obj.status == 1) {
 				$('#genome_id').val( obj.genome_id );
 				$('#loading_msg').hide();
