--- a/web/tmpl/LoadGenome.tmpl
+++ b/web/tmpl/LoadGenome.tmpl
@@ -492,7 +492,7 @@ function search_ncbi_taxonomy (search_term) {
 
 
 <div id="create_new_organism_dialog" class="dialog_box" title="Create New Organism" style="display:none;">
-	<div class="small">
+	<div class="small" style="padding-top:10px;">
     	Search NCBI:
     	<input type="textbox" size="70" spellcheck="false" onkeyup="activate_on_input(['edit_organism_name', 'edit_organism_desc'], 'create_organism_button'); wait_to_search(search_ncbi_taxonomy, this.value);" />
 	    <img id="wait_ncbi" src="picts/ajax-loader.gif" style="opacity: 0;" />
