Non-functional change

--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -768,7 +768,7 @@ function toggle_star(img) {
 			</td></tr>
 		</table>
 
-		<div style="padding-top:10px;color:gray;">
+		<div style="float:left;color:gray;padding-top:10px;">
 			<div><b><TMPL_VAR NAME='FULL_NAME'></b> - <TMPL_VAR NAME='USER_NAME'></div>
 			<div class="small"><TMPL_VAR NAME='EMAIL'></div>
 		</div>
@@ -790,6 +790,10 @@ function toggle_star(img) {
 				<td style="padding-left:10px;color:dimgray;"><TMPL_VAR NAME='EMAIL'></td>
 			</tr>
 		</table>-->
+
+		<!--<div class="small" style="float:left;padding-left:50px;color:gray;">
+			News:
+		</div>-->
 	</div>
 	<div style="clear:both;height:13px;"></div>
 </div>
